# myprss

./: .gitignore  LICENSE  README.md  pyproject.toml
myprss/: config.py  logger.py  main.py  parser.py  reader.py  registry.py  utils.py
src/: config.py  logger.py  main.py  parser.py  reader.py  registry.py
