[tool.poetry]
name = "myprss"
version = "0.1.0"
description = "rss reader for terminal"
authors = ["rarnal <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
